Prevent photos overlapping on content
Ref #50

--- a/src/assets/_styles/layout/_big-content.scss
+++ b/src/assets/_styles/layout/_big-content.scss
@@ -81,8 +81,8 @@ $icons--big-size: 4em;
       top: 0;
       right: 0;
       bottom: 0;
-      height: 100%;
-      max-width: none;
+      max-height: 100%;
+      max-width: 50%;
     }
   }
 }
